--- a/src/styles/views/_user-profile.scss
+++ b/src/styles/views/_user-profile.scss
@@ -60,7 +60,7 @@
         height: 65vh;
         display: flex;
         justify-content: space-evenly;
-        align-items: center;
+        padding-top: 50px;
         color: $clr5;
 
         h2 {
