--- a/src/styles/components/_task-members.scss
+++ b/src/styles/components/_task-members.scss
@@ -21,10 +21,9 @@
         border-radius: 0;
 
     }
-    // .members-search {
-    //     position: relative;
-    //     border-color: white;
-    // }
+    .el-icon-search {
+        font-size: inherit;
+    }
 
     .line-separator-members {
         width: 85%;
