sidebar almost done

--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -81,6 +81,7 @@
                 cursor: pointer;
                 margin-bottom: 16px;
                 margin-inline-start: 7px;
+                margin-right: 10px;
 
             }
             img {
@@ -89,6 +90,7 @@
                 margin-right: 0;
                 margin-bottom: 16px;
                 margin-inline-start: 7px;
+                margin-right: 10px;
             }
             .board-search {
                 .el-icon-search {
