--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -82,7 +82,6 @@
                 margin-bottom: 16px;
                 margin-inline-start: 7px;
                 margin-right: 10px;
-
             }
             img {
                 width: 18px;
@@ -108,13 +107,23 @@
             .change-board {
                 color: $clr3;
                 font-weight: bolder;
-                border-top: 1px solid $clr6;
+                border-top: 1px solid $clr4;
                 margin-top: 10px;
+                height: 20px;
             }
 
             .mini-board-prev {
                 border-bottom: 1px solid $clr4;
                 cursor: pointer;
+                height: 30px;
+                width: 100%;
+
+               &:hover {
+                    background-color: $clr4;
+                }
+                .el-icon-caret-right {
+                    margin-top: 10px;
+                }
             }
         }
     }
