--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -2,27 +2,27 @@
     display: flex;
     height: 35px;
     background-color: $clr2;
-    margin-bottom: .0625rem;
+    margin-bottom: 0.0625rem;
     border-radius: 1px;
-    border-right: 8px solid #e6e9ef;
-    transition: background-color .3s;
-    padding: 0 .625rem;
+    border-right: 8px solid $clr4;
+    transition: background-color 0.3s;
+    padding: 0 0.625rem;
     color: $clr3;
-    font-size: .8125rem;
-    justify-content: space-between;    
+    font-size: 0.8125rem;
+    justify-content: space-between;
 
-    .btn-chat{
+    .btn-chat {
         cursor: pointer;
     }
 
     &:hover {
-        background-color: #E6E9EF;
+        background-color: $clr4;
 
-        .btns-hidden{
+        .btns-hidden {
             opacity: 1;
         }
     }
-    
+
     .members-container,
     .status-container,
     .date-picker-container,
@@ -32,14 +32,14 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        cursor: pointer
+        cursor: pointer;
     }
 
-    .date-picker-container{
+    .date-picker-container {
         padding: 0 10px;
     }
-    
-    .members-container{
+
+    .members-container {
         padding: 0 10px;
         padding-top: 4px;
     }
@@ -51,7 +51,7 @@
         height: 35px;
         display: flex;
         align-items: center;
-        justify-content: center
+        justify-content: center;
     }
 
     .date-picker {
@@ -64,10 +64,10 @@
         width: 100%;
 
         .remove-title-wrapper {
-            width: 100%;   
-            
-            form{
-                width:100%
+            width: 100%;
+
+            form {
+                width: 100%;
             }
         }
         .task-title {
@@ -78,16 +78,13 @@
             cursor: pointer;
             border: none;
             width: 100%;
-            background-color: $clr2;
-
-            &:hover {
-                background-color: $clr4;
-            }
+            background-color: inherit;
         }
-        .el-icon-delete{
+        .el-icon-delete {
             margin-right: 5px;
         }
-        .el-icon-delete, .el-icon-edit{
+        .el-icon-delete,
+        .el-icon-edit {
             font-size: 11px;
         }
     }
@@ -110,7 +107,7 @@
         color: #fff;
     }
 
-    .btns-hidden{
+    .btns-hidden {
         opacity: 0;
     }
 }
