struggled with sound recording componenet

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import "components/task-update";
 @import "components/task-details";
 @import "components/task-activity";
+@import "components/record-msg";
 
 // VIEWS
 
