--- a/src/styles/components/_board-preview.scss
+++ b/src/styles/components/_board-preview.scss
@@ -27,6 +27,6 @@
         font-size: 30px;
         margin-top: -110px;
         height: 40px;
-        color: white;
+        color: red;
     }
 }
