--- a/src/styles/views/_board.scss
+++ b/src/styles/views/_board.scss
@@ -5,5 +5,7 @@
         margin-bottom: 70px;
         color: $clr5;
         text-align: center;
+        font-weight: bold;
+        font-size: 3rem;
     }
 }
