--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,6 +27,7 @@
 @import "components/task-details";
 @import "components/task-activity";
 @import "components/record-msg";
+@import "components/stopwatch";
 
 // VIEWS
 
