--- a/src/styles/components/_task-priority.scss
+++ b/src/styles/components/_task-priority.scss
@@ -5,7 +5,7 @@
 
     
     .priority-list {
-        width: 9.375rem;
+        min-width: 9.375rem;
         top: 40px;
         padding: 5px 10px;
         z-index: 5;
