--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -74,6 +74,7 @@
         >*:not(.color-picker) {
             display: flex;
             align-items: center;
+            justify-content: start;
             // justify-content: space-between;
         }
 
