--- a/src/styles/components/_priority-bar.scss
+++ b/src/styles/components/_priority-bar.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 9.375rem;
   height: 25px;
-  transform: translateX(10%);
+  transform: translateX(0);
   
   .part-of-bar:hover{
     transition: transform .4s;
