--- a/src/styles/components/_stopwatch.scss
+++ b/src/styles/components/_stopwatch.scss
@@ -1,11 +1,10 @@
 .stopwatch {
   display: flex;
   cursor: default;
-  margin-left: 10px;
 
   p{
     margin-bottom: 0px;
-    margin-left: 5px;
+    padding-left: 5px;
   }
 
   .btn-stopwatch{
