--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -20,14 +20,13 @@
 
     .group-header {
         height: 48px;
-        // padding: 0 8px;
         padding-right: 8px;
         display: flex;
         text-align: center;
         color: $clr3;
 
         .group-header-right {
-            min-width: 700px;
+            min-width: 800px;
             display: flex;
             justify-content: space-between;
             padding-right: .625rem;
@@ -74,8 +73,7 @@
         >*:not(.color-picker) {
             display: flex;
             align-items: center;
-            justify-content: start;
-            // justify-content: space-between;
+            justify-content: space-between;
         }
 
 
