--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -20,6 +20,7 @@
 
     .group-header {
         height: 48px;
+        // padding: 0 8px;
         padding-right: 8px;
         display: flex;
         text-align: center;
@@ -40,6 +41,7 @@
 
         .group-header-left {
             width: 100%;
+            justify-content: start;
 
             .down-arrow-container {
                 width: 15px;
@@ -73,7 +75,6 @@
         >*:not(.color-picker) {
             display: flex;
             align-items: center;
-            justify-content: space-between;
         }
 
 
