--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -85,8 +85,7 @@
                     margin-bottom: 16px;
                     margin-inline-start: 7px;
                     margin-right: 10px;
-            }
-
+                }
             }
             img {
                 width: 18px;
@@ -123,7 +122,7 @@
                 height: 30px;
                 width: 100%;
 
-               &:hover {
+                &:hover {
                     background-color: $clr4;
                 }
                 .el-icon-caret-right {
@@ -133,16 +132,17 @@
         }
 
         .chosen-board {
-            background-color:#f944441a;
+            background-color: #f944441a;
         }
     }
     .header-not-shown {
         background-color: $clr5;
         width: 0;
+        visibility: hidden;
     }
     .header-shown {
         background-color: #fff;
         width: 15.937rem;
-        // backface-visibility: hidden;
+        visibility: visible;
     }
 }
