css sidebar chosen board

--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -132,7 +132,7 @@
         }
 
         .chosen-board {
-            background-color: #f944441a;
+            background-color: $clr2;
         }
     }
     .header-not-shown {
