--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -37,7 +37,7 @@
     }
 
     .stopwatch-container {
-        background-color: blanchedalmond;
+        background-color: #e5e5e5;
     }
 
     .date-picker-container {
