--- a/src/styles/components/_board-preview.scss
+++ b/src/styles/components/_board-preview.scss
@@ -23,10 +23,10 @@
         text-align: center;
         border-radius: 0px 0px 40px 40px;
         font-family: sans-serif;
-        font-weight: bold;
-        font-size: 30px;
-        margin-top: -110px;
+        font-weight: bolder;
+        font-size: 25px;
+        margin-top: -53px;
         height: 40px;
-        color: red;
+        color: white;
     }
 }
