--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -11,6 +11,14 @@
     font-size: 0.8125rem;
     justify-content: space-between;
 
+    input[type=text]{
+        padding: rem(5px) rem(5px)
+      }
+    input[type=text]:focus {
+        outline: 1px dashed black;
+        padding: rem(5px) rem(5px)
+      }
+
     .btn-chat {
         cursor: pointer;
     }
