--- a/src/styles/components/_home-page-header.scss
+++ b/src/styles/components/_home-page-header.scss
@@ -4,12 +4,16 @@
     nav {
         > * {
             padding: 0 10px;
-            font-size: 25px;
+            font-size: 20px;
             color: $clr5;
 
             &:hover {
                 opacity: 0.6;
             }
+        }
+
+        img {
+            width: 50px;
         }
     }
 }
