--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -1,12 +1,12 @@
-// @font-face {
-//     font-family: Montserrat;
-//     src: url(~@/assets/fonts/Montserrat/Montserrat-Regular.ttf);
-// }
-// @font-face {
-//     font-family: Opensans;
-//     src: url(~@/assets/fonts/OpenSans/OpenSans-Regular.ttf);
-// }
-// @font-face {
-//     font-family: GreatVibes;
-//     src: url(~@/assets/fonts/GreatVibes/GreatVibes-Regular.ttf);
-// }
+@font-face {
+    font-family: FredokaOne;
+    src: url(~@/assets/fonts/FredokaOne/FredokaOne-Regular.ttf);
+}
+@font-face {
+    font-family: OpenSans;
+    src: url(~@/assets/fonts/OpenSans/OpenSans-Regular.ttf);
+}
+@font-face {
+    font-family: Roboto;
+    src: url(~@/assets/fonts/Roboto/Roboto-Regular.ttf);
+}
