--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -3,7 +3,7 @@
 }
 
 html {
-	font-family: Montserrat, sans-serif;
+	font-family: Roboto, sans-serif;
 	line-height: 1.6;
 	color: $clr3;
 }
@@ -12,10 +12,6 @@ body {
 	margin: 0;
 	background-color: $clr2;
 	overflow-x: hidden;
-	  
-	// background-image: url('~@/assets/images/cats-pattern-background_1425-90.jpg');
-	// background-size: 180px;
-	// background-attachment: fixed;
 }
 
 h1,
