--- a/src/styles/views/_home-page.scss
+++ b/src/styles/views/_home-page.scss
@@ -1,72 +1,96 @@
 .home-page {
+    width: 100%; 
     display: flex;
-    width: 100vw;
-}
+    flex-direction: column;
 
-.side-bar {
-    background: #ff416c;
-    background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
-    color: #fff;
-    width: 20%;
-}
+    .hero-homepage {
+        position: relative;
+        padding-left: 5rem;
+        padding-right: 5rem;
+        background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+        .main-hero {
+            padding: 6rem 0;
 
-.main-home-page {
-    color: $clr3;
-    height: 100vh;
-    width: 100%;
-    display: grid;
-    gap: 20px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 1fr;
+            .hero-content {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
 
-    .home-page-header {
-        grid-column: 1;
-        grid-row: 1 / 2;
-        display: flex;
-        align-items: center;
+                .title-hero {
+                    font-family: OpenSans, sans-serif;
+                    margin-bottom: 6px;
+                    font-size: 2.2rem;
+                    font-weight: bold;
+                    color: #fff;
+                }
+
+                .txt-hero {
+                    line-height: 1.3;
+                    width: 65ch;
+                    margin-bottom: 3rem;
+                    font-size: 1.15rem;
+                    color: hsla(0,0%,100%,.5)!important;
+                }
+                
+                .try-btn {
+                    width: 100px;
+                    padding: 8px 18px;
+                    background-color: #ff416c;
+                    border: 1px solid #ff416c;
+                    border-radius: 9px;
+                    color: $clr2;
+
+                    &:hover {
+                        color: #ff416c;
+                        background-color: $clr2;
+                        border: 1px solid #ff416c;
+                    }
+
+                    &:active {
+                        color: $clr2;
+                    }
+                }
+            }
+
+            .img-hero {
+                width: 300px;
+            }
+        }
     }
 
-    .main-content {
-        grid-column: 1;
-        grid-row: 2 / 3;
-        display: flex;
-        justify-content: center;
-        margin-top: 10%;
+    .main-feature {
+        padding: 3rem 5rem;
+        text-align: center;
+        justify-content: space-between;
 
         > * {
-            padding: 0 2rem;
-        }
-    }
-
-    .co-working-img {
-        width: 400px;
-    }
-
-    .home-description {
-        margin-bottom: 15px;
-    }
-
-    span {
-        color: $clr5;
-        font-weight: 600;
-        font-style: italic;
-    }
-
-    .try-btn {
-        padding: 10px 20px;
-        background-color: #ff416c;
-        border: 1px solid $clr2;
-        border-radius: 9px;
-        color: $clr2;
-
-        &:hover {
-            color: #ff416c;
-            background-color: $clr2;
-            border: 1px solid #ff416c;
+            padding: 0 1rem;
+            max-width: 300px;
         }
 
-        &:active {
-            color: $clr2;
+        .title-box {
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .txt-box {
+            font-size: 15px;
+        }
+
+        .icon-box {
+            background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+            border-radius: 50%;
+            padding: 10px;
+            height: 5rem;
+            width: 5rem;
+            margin-bottom: 1.5rem;
+            margin-left: auto;
+            margin-right: auto;
+
+            i {
+                color: #fff;
+                font-size: 40px;
+            }
         }
     }
 }
