--- a/src/styles/views/_board.scss
+++ b/src/styles/views/_board.scss
@@ -1,11 +1,44 @@
 .boards-page {
-    padding-top: 60px;
+
+    nav {
+        display: flex;
+        padding: 2rem 5rem;
+        align-items: center;
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            font-family: FredokaOne, sans-serif;
+            font-size: 30px;
+
+            > * {
+                text-decoration: none;
+                color: inherit;
+            }
+        }
+
+        > * {
+            padding: 0 10px;
+            font-size: 20px;
+            color: $clr5;
+
+            &:hover {
+                opacity: 0.6;
+            }
+        }
+
+        img {
+            width: 30px;
+            margin-right: 10px;
+        }
+    }
 
     h1 {
         margin-bottom: 20px;
-        color: $clr5;
+        color: #ff4b2b;
         text-align: center;
         font-weight: bold;
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
