basic layout charts

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -28,6 +28,7 @@
 @import "components/task-activity";
 @import "components/record-msg";
 @import "components/stopwatch";
+@import "components/chart";
 
 // VIEWS
 
