--- a/src/styles/components/_chart.scss
+++ b/src/styles/components/_chart.scss
@@ -1,16 +1,24 @@
 .charts-main-container {
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    max-width: 50%;
+    margin: rem(100px) auto;
+    grid-gap: rem(100px);
+    text-align: center;
 
-//     .upper-charts {
-// padding: 50px;
-//     }
-
-    .chart {
-        width: 100%;
+    .status-chart {
+        grid-column: 1 / 2;
+        grid-row: 1
     }
 
-    .chart-time {
-        width: 160%;
+    .priority-chart {
+        grid-column: 2 / 3;
+        grid-row: 1
+    }
+
+    .lower-chart {
+        grid-column: 1 / 3;
+        grid-row: 2
     }
 }
