--- a/src/styles/components/_board-list.scss
+++ b/src/styles/components/_board-list.scss
@@ -4,9 +4,9 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, .2), 0 10px 10px rgba(0, 0, 0, .2);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 60%;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 60%;
     margin-left: auto;
     margin-right: auto;
 
