--- a/src/styles/components/_board-list.scss
+++ b/src/styles/components/_board-list.scss
@@ -27,4 +27,9 @@
         background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
         color: #fff;
     }
+
+    .router-link-card {
+        width: 100%;
+        height: 100%;
+    }
 }
