--- a/src/styles/views/_home-page.scss
+++ b/src/styles/views/_home-page.scss
@@ -3,11 +3,14 @@
     display: flex;
     flex-direction: column;
 
+    .hero-container {
+        background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+    }
+
     .hero-homepage {
         position: relative;
-        padding-left: 5rem;
-        padding-right: 5rem;
-        background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+        max-width: rem(1010px);
+        margin: auto;
         .main-hero {
             padding: 6rem 0;
 
@@ -59,9 +62,11 @@
     }
 
     .main-feature {
-        padding: 3rem 5rem;
+        padding: 3rem 0;
         text-align: center;
         justify-content: space-between;
+        max-width: rem(1010px);
+        margin: auto;
 
         > * {
             padding: 0 1rem;
