added filter but need's to handle error

--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -148,7 +148,7 @@
         margin-right: 5px;
     }
 
-    .add-view-row-container{
+    .buttons-row-container{
         width: 100%;
         border: 1px solid transparent;
         box-shadow: 0 3px 4px -5px #484444;
