--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -151,22 +151,25 @@
         border: 1px solid transparent;
         box-shadow: 0 3px 4px -5px #484444;
 
+        .select-filter {
+            margin: 10px 0;
+            background-color: #fff;
+            color: #3f4045;
+            border-color: #e6e9ef;
+            margin: 10px 0;
+            background-color: #fff;
+            color: $clr3;
+            border-color: $clr4;
+            padding: 10px 15px;
+            justify-content: space-between;
+            cursor: pointer;
+            align-items: center;
+        }
         .add-view-btn {
             margin: 10px 0;
             background-color: #fff;
             color: $clr3;
             border-color: $clr4;
-
-            .select-filter select {
-                margin: 10px 0;
-                background-color: #fff;
-                color: #3f4045;
-                border-color: #e6e9ef;
-                margin: 10px 0;
-                background-color: #fff;
-                color: $clr3;
-                border-color: $clr4;
-            }
 
             &:hover {
                 background-color: $clr4;
