--- a/src/styles/components/_chart.scss
+++ b/src/styles/components/_chart.scss
@@ -1,44 +1,83 @@
 .charts-main-container {
     display: grid;
-    grid-template-columns: 3fr 3fr 1fr;
-    grid-template-rows: 1fr .5fr .5fr;
-    gap: rem(50px);
-    // max-width: 80%;
-    // margin: rem(100px) auto;
+    grid-template-columns: 1fr 3fr 3fr;
+    grid-template-rows: 155px 155px 155px 155px;
+    gap: rem(30px);
     text-align: center;
+    margin-bottom: rem(30px);
+
+    > * {
+        > * {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
 
     .status-chart-container {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
         
         .status-chart {
             width: 250px;
             height: 230px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
         }
     }
 
     .priority-chart-container {
-        grid-column: 2 / 3;
-        grid-row: 1 / 2;
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
 
         .priority-chart {
             width: 200px;
             height: 230px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
         }
     }
 
     .lower-chart-container {
-        grid-column: 1 / 3;
-        grid-row: 2 / 4;
+        grid-column: 2 / 4;
+        grid-row: 3 / 5;
 
         .time-chart {
+            height: 270px;
+            width: 500px;
+        }
+    }
 
+    .num-group {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+
+        > * {
+            height: 100%;
+        }
+    }
+
+    .num-task {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+
+        > * {
+            height: 100%;
+        }
+    }
+
+    .num-member {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+
+        > * {
+            height: 100%;
+        }
+    }
+
+    .num-member2 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+
+        > * {
+            height: 100%;
         }
     }
 
