--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -151,6 +151,23 @@
         border: 1px solid transparent;
         box-shadow: 0 3px 4px -5px #484444;
 
+        .add-view-btn {
+            margin: 10px 0;
+            background-color: #fff;
+            color: $clr3;
+            border-color: $clr4;
+
+            &:hover {
+                background-color: $clr4;
+            }
+        }
+    }
+
+    .filters-container {
+        .btn-add-group {
+            margin: 10px 0;
+        }
+    
         .select-filter {
             margin: 10px 0;
             background-color: #fff;
@@ -165,21 +182,8 @@
             cursor: pointer;
             align-items: center;
         }
-        .add-view-btn {
-            margin: 10px 0;
-            background-color: #fff;
-            color: $clr3;
-            border-color: $clr4;
-
-            &:hover {
-                background-color: $clr4;
-            }
-        }
     }
 
-    .btn-add-group {
-        margin: 10px 0;
-    }
 
     .no-border-radius {
         border-top-left-radius: 0;
