working on filter

--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -173,11 +173,10 @@
             background-color: #fff;
             color: #3f4045;
             border-color: #e6e9ef;
-            margin: 10px 0;
+            margin: 10px 10px;
             background-color: #fff;
             color: $clr3;
             border-color: $clr4;
-            padding: 10px 15px;
             justify-content: space-between;
             cursor: pointer;
             align-items: center;
