--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -144,4 +144,16 @@
             }
         }
     }
+
+    @include for-mobile-layout {
+        .group-header {
+            .group-header-right {
+                display: none;
+
+            }
+        }
+        .bars-container {
+            display: none;
+        }
+    }
 }
