--- a/src/styles/components/_task-preview.scss
+++ b/src/styles/components/_task-preview.scss
@@ -130,4 +130,19 @@
     .btns-hidden {
         opacity: 0;
     }
+
+    @include for-mobile-layout { 
+        .members-container,
+        .status-container,
+        .date-picker-container,
+        .priority-container {
+            display: none;
+        }
+
+        .task-left-container {
+            .task-title {
+                width: 320px;
+            }
+        }
+    }
 }
