--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -116,7 +116,7 @@
                     padding-left: 0;
                 }
 
-                .el-input--prefix .el-input__inner {
+                .el-input__inner {
                     border: none;
                 }
             }
