--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -146,10 +146,17 @@
     }
 
     @include for-mobile-layout {
+        padding-bottom: 30px;
+
         .group-header {
             .group-header-right {
                 display: none;
+            }
 
+            .group-header-left {
+                .group-title-input {
+                    font-size: rem(14px);
+                }
             }
         }
         .bars-container {
