--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -150,9 +150,9 @@
         margin-bottom: 30px;
 
         .group-header {
-            .group-header-right {
-                display: none;
-            }
+            // .group-header-right {
+            //     display: none;
+            // }
 
             .group-header-left {
                 .group-title-input {
