--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -150,13 +150,10 @@
         margin-bottom: 30px;
 
         .group-header {
-            // .group-header-right {
-            //     display: none;
-            // }
-
             .group-header-left {
                 .group-title-input {
                     font-size: rem(14px);
+                    width: 70vw;
                 }
             }
         }
