--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -211,6 +211,7 @@
 
     @include for-mobile-layout {
         display: block;
+        width: 1049px;
 
         .board-static-header {
             display: none;
@@ -222,6 +223,7 @@
             border-top-left-radius: 0;
             position: absolute;
             top: 50px;
+            width: 1049px;
         }
 
         .filters-container {
