--- a/src/styles/views/_board-details.scss
+++ b/src/styles/views/_board-details.scss
@@ -228,4 +228,13 @@
             display: none;
         }
     }
+
+    @include for-mobile-layout {
+        
+        .details-wrapper{
+            overflow: auto;
+
+        }
+        
+    }
 }
