--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -156,6 +156,14 @@
                     width: 70vw;
                 }
             }
+
+            // .group-header-right {
+            //     min-width: 600px;
+
+            //     >* {
+            //         width: 7.375rem;
+            //     }
+            // }
         }
         .bars-container {
             display: none;
