--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -149,6 +149,7 @@
         padding-bottom: 0;
         margin-bottom: 30px;
         width: rem(1049px);
+        padding-right: 10px;
 
         .group-header {
             .group-header-left {
