--- a/src/styles/views/_home-page.scss
+++ b/src/styles/views/_home-page.scss
@@ -1,10 +1,10 @@
 .home-page {
-    width: 100%; 
+    width: 100%;
     display: flex;
     flex-direction: column;
 
     .hero-container {
-        background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+        background: linear-gradient(to right, #6273ff, rgba(91, 218, 201, 0.8)) no-repeat 0 0 / cover;
     }
 
     .hero-homepage {
@@ -21,7 +21,7 @@
 
                 .title-hero {
                     font-family: OpenSans, sans-serif;
-                    margin-bottom: 6px;
+                    margin-bottom: rem(6px);
                     font-size: 2.2rem;
                     font-weight: bold;
                     color: #fff;
@@ -32,21 +32,21 @@
                     width: 65ch;
                     margin-bottom: 3rem;
                     font-size: 1.15rem;
-                    color: hsla(0,0%,100%,.5)!important;
+                    color: hsla(0, 0%, 100%, 0.5) !important;
                 }
-                
+
                 .try-btn {
-                    width: 100px;
-                    padding: 8px 18px;
+                    width: rem(100px);
+                    padding: rem(8px) rem(18px);
                     background-color: #ff416c;
-                    border: 1px solid #ff416c;
-                    border-radius: 9px;
+                    border: rem(1px) solid #ff416c;
+                    border-radius: rem(9px);
                     color: $clr2;
 
                     &:hover {
                         color: #ff416c;
                         background-color: $clr2;
-                        border: 1px solid #ff416c;
+                        border: rem(1px) solid #ff416c;
                     }
 
                     &:active {
@@ -56,7 +56,7 @@
             }
 
             .img-hero {
-                width: 300px;
+                width: rem(300px);
             }
         }
     }
@@ -70,22 +70,22 @@
 
         > * {
             padding: 0 1rem;
-            max-width: 300px;
+            max-width: rem(300px);
         }
 
         .title-box {
             font-weight: bold;
-            font-size: 20px;
+            font-size: rem(20px);
         }
 
         .txt-box {
-            font-size: 15px;
+            font-size: rem(15px);
         }
 
         .icon-box {
-            background: linear-gradient(to right, #6273ff, rgba(91,218,201,.8)) no-repeat 0 0 / cover;
+            background: linear-gradient(to right, #6273ff, rgba(91, 218, 201, 0.8)) no-repeat 0 0 / cover;
             border-radius: 50%;
-            padding: 10px;
+            padding: rem(10px);
             height: 5rem;
             width: 5rem;
             margin-bottom: 1.5rem;
@@ -94,7 +94,128 @@
 
             i {
                 color: #fff;
-                font-size: 40px;
+                font-size: rem(40px);
+            }
+        }
+    }
+}
+
+@include for-mobile-layout {
+    .hero-homepage {
+        .hero-container {
+            max-width: rem(460px);
+            background: linear-gradient(to right, #6273ff, rgba(91, 218, 201, 0.8)) no-repeat 0 0 / cover;
+        }
+
+        .home-page-header {
+            padding: 0 rem(10px) 0 0;
+
+            nav {
+                padding-top: rem(10px);
+                display: flex;
+                justify-content: space-between;
+            }
+            span {
+                font-size: 1.3rem;
+            }
+
+            .header-login {
+                margin-right: rem(5px);
+            }
+            a {
+                font-size: 1.2rem;
+                padding: 0;
+                margin-left: rem(10px);
+            }
+
+            .logo {
+            }
+        }
+        .main-hero {
+            max-width: rem(460px);
+
+            .hero-content {
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                padding: rem(10px);
+                // text-align: center;
+
+                h1 {
+                    margin-bottom: rem(6px);
+                    font-size: 1.3rem !important;
+                    font-weight: bold;
+                    color: #fff;
+                }
+
+                .txt-hero {
+                    line-height: 1.3;
+                    width: 38ch !important;
+                    margin-bottom: 3rem;
+                    font-size: 1rem !important;
+                    color: hsla(0, 0%, 100%, 0.5) !important;
+                }
+
+                .try-btn {
+                    width: rem(100px);
+                    padding: rem(8px) rem(18px);
+                    background-color: #ff416c;
+                    border: rem(1px) solid #ff416c;
+                    border-radius: rem(9px);
+                    color: $clr2;
+
+                    &:hover {
+                        color: #ff416c;
+                        background-color: $clr2;
+                        border: rem(1px) solid #ff416c;
+                    }
+
+                    &:active {
+                        color: $clr2;
+                    }
+                }
+            }
+
+            .img-hero {
+                width: rem(300px);
+            }
+        }
+    }
+
+    .main-feature {
+        padding: 3rem 0;
+        text-align: center;
+        justify-content: space-between;
+        max-width: rem(1010px);
+        margin: auto;
+
+        > * {
+            padding: 0 1rem;
+            max-width: rem(300px);
+        }
+
+        .title-box {
+            font-weight: bold;
+            font-size: rem(20px);
+        }
+
+        .txt-box {
+            font-size: rem(15px);
+        }
+
+        .icon-box {
+            background: linear-gradient(to right, #6273ff, rgba(91, 218, 201, 0.8)) no-repeat 0 0 / cover;
+            border-radius: 50%;
+            padding: rem(10px);
+            height: 5rem;
+            width: 5rem;
+            margin-bottom: 1.5rem;
+            margin-left: auto;
+            margin-right: auto;
+
+            i {
+                color: #fff;
+                font-size: rem(40px);
             }
         }
     }
