--- a/src/styles/views/_home-page.scss
+++ b/src/styles/views/_home-page.scss
@@ -181,6 +181,7 @@
                 position:absolute;
                 bottom: rem(98px);
                 left: rem(200px);
+                width: auto !important;
 
                 img {
                     width: rem(150px) !important;
