--- a/src/styles/components/_board-list.scss
+++ b/src/styles/components/_board-list.scss
@@ -32,4 +32,9 @@
         width: 100%;
         height: 100%;
     }
+
+    @include for-mobile-layout {
+        width: 90%;
+        min-height: 50%;
+    }
 }
